--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -619,6 +619,12 @@ components:
           maxLength: 32 
           minLength: 32 
           example: 00112233445566778899AABBCCDDEEFF
+        ownership_factory_code:
+          type: string
+          format: base16
+          maxLength: 8 
+          minLength: 8 
+          example: ABCDEF01
     password:
       type: object
       properties:
