--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -1,9 +1,11 @@
 openapi: '3.0.2'
 info:
   title: API THEye
-  version: '0.23.0'
+  version: '0.24.0'
 servers:
   - url: https://backend.theye.ch/api/v0
+  - url: https://staging.backend.theye.ch/api/v0
+  - url: http://localhost:8000/api/v0
 
 components:
   schemas:
@@ -125,6 +127,21 @@ components:
         recaptcha_token: 
           type: string
           maxLength: 255
+    checkout-session:
+      type: object
+      properties:
+        price_id:
+          type: string
+          example: price_fkdalj2o3ijsf
+        quantity:
+          type: number 
+          example: 10 
+    checkout-session-url:
+      type: object
+      properties:
+        checkout_url:
+          type: string
+          example: https://example.com 
     device:
       type: object
       properties:
@@ -577,6 +594,29 @@ components:
         key_id:
           type: integer 
           example: 314 
+    feature:
+      type: object
+      properties:
+        max_devices:
+          type: integer 
+        max_organizations:
+          type: integer 
+        max_members:
+          type: integer 
+        data_history_seconds:
+          type: string 
+        chart_superposition:
+          type: boolean 
+        email_new_data:
+          type: boolean 
+        alarm_system:
+          type: boolean 
+        data_export:
+          type: boolean 
+        signed_certificate:
+          type: boolean 
+        locking: 
+          type: boolean 
     log:
       type: object
       properties:
@@ -675,6 +715,91 @@ components:
         new_password:
           type: string
           example: NewSecretPa55word 
+    plan:
+      type: object
+      properties:
+        stripe_id:
+          type: string 
+          example: prod_loremipsum 
+          readOnly: True
+        name:
+          type: string
+          example: Pro 
+        description:
+          type: string
+          example: Pro plan 
+        display_order:
+          type: integer 
+          example: 10 
+        features:
+          type: object 
+          $ref : '#/components/schemas/feature'
+        prices:
+          type: array
+          items:
+            type: object 
+            $ref : '#/components/schemas/price'
+    portal-session-url:
+      type: object
+      properties:
+        portal_url:
+          type: string
+          example: https://example.com 
+    price:
+      type: object
+      properties:
+        stripe_id:
+          type: string 
+          example: price_loremipsum 
+          readOnly: True
+        currency:
+          type: string
+          example: chf 
+        interval:
+          type: string
+          example: month 
+        interval_count:
+          type: integer 
+          example: 1 
+        unit_amount:
+          type: integer 
+          example: 1 
+    product:
+      type: object
+      properties:
+        stripe_id:
+          type: string 
+          example: prod_loremipsum 
+          readOnly: True
+        name:
+          type: string
+          example: Pro 
+        description:
+          type: string
+          example: Pro plan 
+        display_order:
+          type: integer 
+          example: 10 
+        features:
+          type: object 
+          $ref : '#/components/schemas/feature'
+    subscription:
+      type: object
+      properties:
+        stripe_id:
+          type: string 
+          example: prod_loremipsum 
+          readOnly: True
+        quantity:
+          type: string 
+          example: prod_loremipsum 
+          readOnly: True
+        price:
+          type: object 
+          $ref : '#/components/schemas/price'
+        product:
+          type: object 
+          $ref : '#/components/schemas/product'
     profile:
       type: object
       properties:
@@ -697,6 +822,7 @@ components:
           format: unicode locale identifier
           description: https://unicode.org/reports/tr35/
           example: 'en-US'
+
     synchronization-nonce:
       type: object
       properties:
@@ -1855,6 +1981,118 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/status' 
+  /subscription/checkout-session/:
+    post:
+      description: Create a Stripe checkout session 
+      security:
+        - theye_oauth:
+          - write 
+      requestBody:
+        description:  Product and quantity 
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref : '#/components/schemas/checkout-session' 
+      responses:
+        '201':
+          description: Created. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/checkout-session-url' 
+        '401':
+          description: Unauthorized. 
+        '400':
+          description: Bad request. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+        '500':
+          description: Internal server error. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+  /subscription/portal-session/:
+    post:
+      description: Create a Stripe portal session 
+      security:
+        - theye_oauth:
+          - write 
+      responses:
+        '201':
+          description: Created. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/portal-session-url' 
+        '401':
+          description: Unauthorized. 
+        '400':
+          description: Bad request. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+        '500':
+          description: Internal server error. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+  /subscription/my-subscription/:
+    get:
+      description: Get the user current stripe subscription 
+      security:
+        - theye_oauth:
+          - write 
+      responses:
+        '200':
+          description: OK. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/subscription' 
+        '401':
+          description: Unauthorized. 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+        '500':
+          description: Internal server error. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status' 
+  /subscription/plans/:
+    get:
+      description: Get stripe plans (product and prices) 
+      responses:
+        '200':
+          description: OK. 
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref : '#/components/schemas/plan' 
   /synchronization-nonce/:
     post:
       description: Get server nonce for server-device time synchronization. 
