--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -1,7 +1,7 @@
 openapi: '3.0.2'
 info:
   title: API THEye
-  version: '0.27.1'
+  version: '0.28.0'
 servers:
   - url: https://backend.theye.ch/api/v0
   - url: https://staging.backend.theye.ch/api/v0
@@ -618,6 +618,21 @@ components:
         key_id:
           type: integer 
           example: 314 
+    email-change:
+      type: object
+      properties:
+        email:
+          type: string
+          format:  email
+          example: alice.wonderland@mail.com
+        new_email:
+          type: string
+          format:  email
+          example: bob.sponge@mail.com
+        redirect_uri:
+          type: string
+          example: https://example.com 
+          description: It must be registered as non_sensitive_redirect_uris
     encrypted_data:
       type: object
       properties:
@@ -2129,6 +2144,46 @@ paths:
               schema:
                 $ref : '#/components/schemas/status-response' 
 
+  /profile/email/:
+    post:
+      description: Create a email change action. 
+      security:
+        - theye_oauth:
+          - write
+      requestBody:
+        description: Email change request 
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref : '#/components/schemas/email-change' 
+      responses:
+        '202':
+          description: Email change send email accepted. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '401':
+          description: Unauthorized 
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '500':
+          description: Internal server error. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
   /profile/password/:
     put:
       description: Update the user password. 
