--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -1,7 +1,7 @@
 openapi: '3.0.2'
 info:
   title: API THEye
-  version: '0.30.0'
+  version: '0.31.0'
 servers:
   - url: https://backend.theye.ch/api/v0
   - url: https://staging.backend.theye.ch/api/v0
@@ -1058,6 +1058,16 @@ components:
           readOnly: True
         status:
           $ref: '#/components/schemas/status'
+    profile-delete:
+      type: object
+      properties:
+        email:
+          type: string
+          format:  email
+          example: alice.wonderland@mail.com
+        password:
+          type: string
+          example: SecretPa55word 
 
     synchronization-nonce:
       type: object
@@ -2267,6 +2277,40 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/profile' 
+        '401':
+          description: Unauthorized 
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+  /profile/delete:
+    put:
+      description: Delete the user.
+      security:
+        - theye_oauth:
+          - write 
+      requestBody:
+        description: User credentials.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref : '#/components/schemas/profile-delete' 
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
         '401':
           description: Unauthorized 
         '400':
